# ai-agent

./: .gitignore  architecture_rules.json  knowledge-agent.md  main.py  pyproject.toml  requirements.txt  run_workflow_demo.py  task-tracking.md  test_workflow.py
src/: config.py  llm_factory.py  test_agents.py  workflow.py
src/agents/: ba.py  dev.py  devops.py  devops_agent.py  pm.py  qa.py  sa.py  ux.py
src/api/: gateway.py
src/controllers/: profile_controller.py
src/core/: __init__.py  gemini.py  state.py
src/mcp/: __init__.py  db_schema.py  github.py  linear.py
src/utils/: log_extractor.py
src/workflows/: governance_graph.py
tests/: test_db_schema.py  test_state_replay.py  test_workflow.py
