[tool.poetry]
name = "antigravity-agentic-sdlc"
version = "0.1.0"
description = "Phase 1 Foundation & Context Layer for Antigravity Agentic SDLC"
authors = ["Antigravity Developer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.0.30"
google-genai = "^0.1.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
mcp = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
extraPaths = ["."]

